Fix html background color on dark mode

--- a/app/app.css
+++ b/app/app.css
@@ -11,15 +11,6 @@
     'Noto Color Emoji';
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
-}
-
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
